--- a/.ipynb
+++ b/.ipynb
@@ -103,15 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-30-3c93e928eef8>, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-30-3c93e928eef8>\"\u001b[1;36m, line \u001b[1;32m22\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
@@ -136,8 +135,12 @@
     "    return T\n",
     "T=np.zeros(nsteps)\n",
     "\n",
-    "#def CrankNicolson(T,t,x,dt,dx):#NEED TO FINISH WRITING THIS\n",
-    "    "
+    "def CrankNicolson(T,t,x,dt,dx):#NEED TO FINISH WRITING THIS\n",
+    "    xi1=xi+dx\n",
+    "    r=(k*dt)/(2*(dx)**2)\n",
+    "    Tn=r*T[xi1]+(1-2*r)*T[xi]+r*T[xi-dx]\n",
+    "    Tn=-r*Tn1[xi1]+(1+2*r)*Tn1[xi]-r*Tn1[xi-dx]\n",
+    "    return Tn1[xi1],Tn1[xi],Tn1[xi-dx]\n"
    ]
   },
   {
