--- a/.ipynb
+++ b/.ipynb
@@ -51,18 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n"
+      "[[2 3 0]\n",
+      " [1 2 3]\n",
+      " [0 1 2]]\n"
      ]
     }
    ],
@@ -72,7 +70,23 @@
     "A=np.zeros((nsteps,nsteps))\n",
     "A[0:3]=[2]*1\n",
     "\n",
-    "print(A)"
+    "#print(A)\n",
+    "\n",
+    "a=np.array([1,2,3,4])\n",
+    "b=np.diag(a)\n",
+    "\n",
+    "#print(b)\n",
+    "a=np.zeros(nsteps-1)\n",
+    "b=np.zeros(nsteps)\n",
+    "c=np.zeros(nsteps-1)\n",
+    "\n",
+    "def tridiag(a, b, c, k1=-1, k2=0, k3=1):\n",
+    "    return np.diag(a, k1) + np.diag(b, k2) + np.diag(c, k3)\n",
+    "\n",
+    "a =; b = [2, 2, 2]; c = [3, 3]\n",
+    "A = tridiag(a, b, c)\n",
+    "\n",
+    "print(A)\n"
    ]
   },
   {
