--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 21. -10.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [-10.  21. -10.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0. -10.  21. -10.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0. -10.  21. -10.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0. -10.  21. -10.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0. -10.  21. -10.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0. -10.  21. -10.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0. -10.  21. -10.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0. -10.  21. -10.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0. -10.  21. -10.   0.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0. -10.  21. -10.   0.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0. -10.  21. -10.   0.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0. -10.  21. -10.\n",
+      "    0.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0. -10.  21.\n",
+      "  -10.   0.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0. -10.\n",
+      "   21. -10.   0.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "  -10.  21. -10.   0.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0. -10.  21. -10.   0.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0. -10.  21. -10.   0.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0. -10.  21. -10.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
+      "    0.   0.   0.   0. -10.  21.]]\n"
+     ]
+    }
+   ],
    "source": [
     "#this is my attempt at crank with the 1D heat equation\n",
     "L=20\n",
@@ -29,10 +76,23 @@
     "dt=tmax/nsteps\n",
     "dx=xmax/isteps\n",
     "k=L**2/tmax\n",
+    "r=(k*dt)/(2*(dx)**2)\n",
     "sigma=L/4\n",
     "x=np.zeros(isteps)\n",
     "t=np.zeros(nsteps)\n",
     "\n",
+    "a=-r\n",
+    "b=(1+2*r)\n",
+    "c=-r\n",
+    "\n",
+    "def tridiag(A, B, C, k1=-1, k2=0, k3=1):\n",
+    "    return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
+    "\n",
+    "A =[a]*(nsteps-1); B = [b]*(nsteps); C = [c]*(nsteps-1)\n",
+    "d = tridiag(A, B, C)\n",
+    "\n",
+    "print(d)\n",
+    "      \n",
     "def T(x,t0):\n",
     "    T=np.exp((-1/2)*(x**2)/(sigma)**2)\n",
     "    return T\n",
@@ -43,36 +103,70 @@
     "    xi1=xi+dx\n",
     "    tn1=tn+dt\n",
     "    r=(k*dt)/(2*(dx)**2)\n",
+    "    a=-r\n",
+    "    b=(1+2*r)\n",
+    "    c=-r\n",
     "    Tn=r*T[xi1]+(1-2*r)*T[xi]+r*T[xi-dx]\n",
     "    Tn=-r*Tn1[xi1]+(1+2*r)*Tn1[xi]-r*Tn1[xi-dx]\n",
     "    Tn=np.matrix([1,Tn])\n",
-    "    return Tn, tn1, xi"
+    "    return Tn, tn1, xi\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n"
+      "[[2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2 3]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 2]]\n"
      ]
     }
    ],
    "source": [
     "#this is me figuring out how to make a matrix...\n",
-    "nsteps=5\n",
+    "nsteps=20\n",
     "A=np.zeros((nsteps,nsteps))\n",
-    "A[0:3]=[2]*5\n",
+    "A[0:3]=[2]*1\n",
     "\n",
-    "print(A)"
+    "#print(A)\n",
+    "\n",
+    "a=np.array([1,2,3,4])\n",
+    "b=np.diag(a)\n",
+    "\n",
+    "#print(b)\n",
+    "a=1\n",
+    "b=2\n",
+    "c=3\n",
+    "\n",
+    "def tridiag(A, B, C, k1=-1, k2=0, k3=1):\n",
+    "    return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
+    "\n",
+    "A =[a]*(nsteps-1); B = [b]*(nsteps); C = [c]*(nsteps-1)\n",
+    "d = tridiag(A, B, C)\n",
+    "\n",
+    "print(d)\n"
    ]
   },
   {
