attempt at schrodinger

--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -388,7 +388,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#addapt for schrodinger equation\n",
+    "\n",
+    "\n",
+    "#variables\n",
+    "L=20\n",
+    "t0=0\n",
+    "tmax=2\n",
+    "x0=0\n",
+    "xmax=L\n",
+    "isteps=4*L\n",
+    "nsteps=10\n",
+    "dt=0.001\n",
+    "dx=xmax/isteps\n",
+    "k=L**2\n",
+    "r=(k*dt)/(2*(dx)**2)\n",
+    "sigma=L/12\n",
+    "x=np.zeros(isteps+1)\n",
+    "\n",
+    "for i in range(isteps):\n",
+    "    xi=x0+(i+1)*dx\n",
+    "    x[i+1]=xi\n",
+    "    \n",
+    "T=np.zeros(isteps)\n",
+    "\n",
+    "for i in range(1,isteps):#gives first array of T vs x\n",
+    "    xi=x0+(i)*dx\n",
+    "    Ti=np.exp((-1/2)*((xi-(L/2))**2)/(sigma)**2)\n",
+    "    T[i]=Ti\n",
+    "print(T)\n",
+    "\n",
+    "#make array of arrays of T\n",
+    "Tn=[]\n",
+    "Tn.append(T)\n",
+    "print(Tn)\n",
+    "\n",
+    "def CrankNicolson(T):#NEED TO FINISH WRITING THIS put in the inverse matrix\n",
+    "    a=-r\n",
+    "    b=(1+2*r)\n",
+    "    c=-r#these are also correct for the LHS\n",
+    "    RHS=np.zeros(isteps)\n",
+    "    for i in range(1,isteps-1):\n",
+    "        RHS[i]=r*T[i+1]+(1-2*r)*T[i]+r*T[i-1]#this is correct\n",
+    "    RHS[0]=r*T[1]\n",
+    "    RHS[isteps-1]=r*T[isteps-2]\n",
+    "    D=np.matrix(RHS).T#made matrix and made it vertical\n",
+    "    def tridiag(A, B, C, k1=-1, k2=0, k3=1):#tridiagonal matrix\n",
+    "        return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
+    "    A=[a]*(isteps-1); B = [b]*(isteps); C = [c]*(isteps-1)\n",
+    "    d=tridiag(A, B, C)\n",
+    "    I=npla.inv(d)#inverse matrix... this might be the issue..?\n",
+    "    T1=I*D\n",
+    "    T1=np.array(T1.T)[0]\n",
+    "    T1[0]=0\n",
+    "    T1[-1]=0\n",
+    "    return T1\n",
+    "\n",
+    "plt.plot(x[0:isteps],T)\n",
+    "\n",
+    "for n in range(nsteps):#run crank for all t and plot for each\n",
+    "    print(T)\n",
+    "    T=CrankNicolson(T)\n",
+    "    Tn.append(T)\n",
+    "    plt.plot(x[0:isteps],T)\n",
+    "\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
