--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -109,22 +111,50 @@
       " [2. 2. 2. 2. 2.]\n",
       " [2. 2. 2. 2. 2.]\n",
       " [0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0.]]\n"
+      " [0. 0. 0. 0. 0.]]\n",
+      "[[11 -5  0  0  0  0  0  0  0  0]\n",
+      " [-5 11 -5  0  0  0  0  0  0  0]\n",
+      " [ 0 -5 11 -5  0  0  0  0  0  0]\n",
+      " [ 0  0 -5 11 -5  0  0  0  0  0]\n",
+      " [ 0  0  0 -5 11 -5  0  0  0  0]\n",
+      " [ 0  0  0  0 -5 11 -5  0  0  0]\n",
+      " [ 0  0  0  0  0 -5 11 -5  0  0]\n",
+      " [ 0  0  0  0  0  0 -5 11 -5  0]\n",
+      " [ 0  0  0  0  0  0  0 -5 11 -5]\n",
+      " [ 0  0  0  0  0  0  0  0 -5 11]]\n",
+      "[11 -5  0  0  0  0  0  0  0  5  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11\n",
+      " -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0\n",
+      "  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0\n",
+      "  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0\n",
+      "  0  0  0 -5 11]\n"
      ]
     }
    ],
    "source": [
     "#this is me figuring out how to make a matrix...\n",
     "nsteps=5\n",
+    "r=nsteps\n",
+    "isteps=10\n",
     "A=np.zeros((nsteps,nsteps))\n",
     "A[0:3]=[2]*1\n",
     "\n",
-    "print(A)"
+    "print(A)\n",
+    "\n",
+    "a=-r\n",
+    "b=(1+2*r)\n",
+    "c=-r\n",
+    "def tridiag(A, B, C, k1=-1, k2=0, k3=1):#tridiagonal matrix\n",
+    "       return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
+    "A=[a]*(isteps-1); B = [b]*(isteps); C = [c]*(isteps-1)\n",
+    "d=tridiag(A, B, C)\n",
+    "print(d)\n",
+    "d1=np.insert(d,9,r)\n",
+    "print(d1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -245,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -340,7 +370,7 @@
     "    T1=I*D\n",
     "    T1=np.array(T1.T)[0]\n",
     "    T1[0]=T1[L]\n",
-    "    T1[-1]=T1[L]\n",
+    "    T1[-1]=T1[0]\n",
     "    return T1\n",
     "\n",
     "plt.plot(x[0:isteps],np.real(T))# plots initial condition\n",
