--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -108,10 +108,19 @@
      "output_type": "stream",
      "text": [
       "[[2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
-      " [2. 2. 2. 2. 2.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]]\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
       "[[11 -5  0  0  0  0  0  0  0  0]\n",
       " [-5 11 -5  0  0  0  0  0  0  0]\n",
       " [ 0 -5 11 -5  0  0  0  0  0  0]\n",
@@ -121,12 +130,7 @@
       " [ 0  0  0  0  0 -5 11 -5  0  0]\n",
       " [ 0  0  0  0  0  0 -5 11 -5  0]\n",
       " [ 0  0  0  0  0  0  0 -5 11 -5]\n",
-      " [ 0  0  0  0  0  0  0  0 -5 11]]\n",
-      "[11 -5  0  0  0  0  0  0  0  5  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11\n",
-      " -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0\n",
-      "  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0\n",
-      "  0  0  0  0  0 -5 11 -5  0  0  0  0  0  0  0  0 -5 11 -5  0  0  0  0  0\n",
-      "  0  0  0 -5 11]\n"
+      " [ 0  0  0  0  0  0  0  0 -5 11]]\n"
      ]
     }
    ],
@@ -136,20 +140,20 @@
     "r=nsteps\n",
     "isteps=10\n",
     "A=np.zeros((nsteps,nsteps))\n",
-    "A[0:3]=[2]*1\n",
+    "A[0:1]=[2]*1\n",
     "\n",
     "print(A)\n",
     "\n",
     "a=-r\n",
     "b=(1+2*r)\n",
     "c=-r\n",
+    "e=np.zeros((isteps-1,isteps-1))\n",
+    "print(e)\n",
     "def tridiag(A, B, C, k1=-1, k2=0, k3=1):#tridiagonal matrix\n",
     "       return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
     "A=[a]*(isteps-1); B = [b]*(isteps); C = [c]*(isteps-1)\n",
-    "d=tridiag(A, B, C)\n",
-    "print(d)\n",
-    "d1=np.insert(d,9,r)\n",
-    "print(d1)"
+    "d=tridiag(A, B, C)#+e\n",
+    "print(d)\n"
    ]
   },
   {
