not sure whats wrong

--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -509,7 +509,7 @@
     "\n",
     "\n",
     "def CrankNicolson(T):#NEED TO FINISH WRITING THIS put in the inverse matrix\n",
-    "    a=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))\n",
+    "    a=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))# do i need to loop this for A also?\n",
     "    b=((-8*(dx**2)+dt-(A[n+1])**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))\n",
     "    c=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))\n",
     "    RHS=np.zeros(isteps,np.complex)\n",
