--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -432,9 +432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.25751811  0.09836316 -0.09836316 -0.25751811 -0.31830989 -0.25751811\n",
+      " -0.09836316  0.09836316  0.25751811  0.31830989  0.25751811  0.09836316\n",
+      " -0.09836316 -0.25751811 -0.31830989 -0.25751811 -0.09836316  0.09836316\n",
+      "  0.25751811  0.31830989  0.        ]\n"
+     ]
+    },
     {
      "ename": "UnboundLocalError",
      "evalue": "local variable 'A' referenced before assignment",
@@ -442,8 +452,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-241166fd910b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnsteps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;31m#run crank for all t and plot for each plots real parts\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m     \u001b[0mT\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mCrankNicolson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[0mTn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0misteps\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-7-241166fd910b>\u001b[0m in \u001b[0;36mCrankNicolson\u001b[1;34m(T)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mCrankNicolson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;31m#NEED TO FINISH WRITING THIS put in the inverse matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m     \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m     \u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmeg0\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-35-b9d0598b0d70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     80\u001b[0m     \u001b[0mA\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdrv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m     \u001b[0mA1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdrv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m     \u001b[0mT\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mCrankNicolson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m     \u001b[0mTn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0misteps\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-35-b9d0598b0d70>\u001b[0m in \u001b[0;36mCrankNicolson\u001b[1;34m(T)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mCrankNicolson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;31m#NEED TO FINISH WRITING THIS put in the inverse matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mA1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m     \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mA1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m# do i need to loop this for A also? need 2 variables for this in the loop for the time steps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m     \u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmeg0\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'A' referenced before assignment"
      ]
     },
@@ -461,7 +471,7 @@
     }
    ],
    "source": [
-    "#attempt with periodic boundary conditions\n",
+    "# trying at particle on ring system with periodic boundary cause ring and vector potential\n",
     "\n",
     "#variables\n",
     "L=20\n",
@@ -480,21 +490,24 @@
     "r=(dt)/(4*k*(dx)**2)\n",
     "sigma=L/12\n",
     "x=np.zeros(isteps+1)\n",
-    "A=np.zeros(nsteps+1)\n",
+    "drv=np.zeros(nsteps+1)\n",
     "t=np.zeros(nsteps+1)\n",
     "\n",
-    "for i in range(isteps):\n",
+    "for i in range(isteps):#x array\n",
     "    xi=x0+(i+1)*dx\n",
     "    x[i+1]=xi\n",
     "\n",
-    "for n in range(nsteps):\n",
+    "for n in range(nsteps):#t array\n",
     "    tn=t0+(n+1)*dt\n",
     "    t[n+1]=tn\n",
     "\n",
-    "for n in range(nsteps):\n",
-    "    An=(eps/Omeg1)*np.cos(Omeg1*tn)\n",
-    "    A[n]=An\n",
-    "    \n",
+    "for n in range(nsteps):#drv array, drv is drive force\n",
+    "    tn=t0+(n+1)*dt\n",
+    "    drvn=(eps/Omeg1)*np.cos(Omeg1*tn)\n",
+    "    drv[n]=drvn\n",
+    "\n",
+    "print(drv)    \n",
+    "\n",
     "T=np.zeros(isteps,np.complex)\n",
     "\n",
     "for i in range(1,isteps):#gives first array of T vs x\n",
@@ -507,20 +520,25 @@
     "Tn=[]\n",
     "Tn.append(T)\n",
     "\n",
+    "A=drv[0]\n",
+    "A1=drv[1]\n",
+    "\n",
+    "\n",
     "\n",
     "def CrankNicolson(T):#NEED TO FINISH WRITING THIS put in the inverse matrix\n",
-    "    a=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))# do i need to loop this for A also?\n",
-    "    b=((-8*(dx**2)+dt-(A[n+1])**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))\n",
-    "    c=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))\n",
+    "    print(A,A1)\n",
+    "    a=((4*dx-4*(dx**2)*k*A1)/(16*(dx**3)))# do i need to loop this for A also? need 2 variables for this in the loop for the time steps\n",
+    "    b=((-8*(dx**2)+dt-(A1)**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))\n",
+    "    c=((4*dx-4*(dx**2)*k*A1)/(16*(dx**3)))\n",
     "    RHS=np.zeros(isteps,np.complex)\n",
     "    for i in range(1,isteps-1):\n",
-    "        RHS[i]=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[i+1]+((-8*(dx**2)+dt-(A[n+1])**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[i]+((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[i-1]\n",
-    "    RHS[0]=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[1]+((-8*(dx**2)+dt-(A[n+1])**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[0]+((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[-1]\n",
-    "    RHS[isteps-1]=((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[0]+((-8*(dx**2)+dt-(A[n+1])**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[-1]+((4*dx-4*(dx**2)*k*A[n+1])/(16*(dx**3)))*T[-2]\n",
+    "        RHS[i]=((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[i+1]+((-8*(dx**2)+dt-(A)**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[i]+((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[i-1]\n",
+    "    RHS[0]=((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[1]+((-8*(dx**2)+dt-(A)**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[0]+((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[-1]\n",
+    "    RHS[isteps-1]=((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[0]+((-8*(dx**2)+dt-(A)**2+2*(Omeg0**2*np.cos(x[1])))/(16*dt*(dx**2)))*T[-1]+((4*dx-4*(dx**2)*k*A)/(16*(dx**3)))*T[-2]\n",
     "    D=np.matrix(RHS).T#made matrix for the RHS\n",
     "    def tridiag(A, B, C, k1=-1, k2=0, k3=1):#tridiagonal matrix\n",
     "        return np.diag(A, k1) + np.diag(B, k2) + np.diag(C, k3)\n",
-    "    A=[a]*(isteps-1); B = [b]*(isteps); C = [c]*(isteps-1)\n",
+    "    A=[-a]*(isteps-1); B = [b]*(isteps); C = [-c]*(isteps-1)\n",
     "    d=tridiag(A, B, C)\n",
     "    d[0][isteps-1]=a#added for periodic boundary conditions, extra terms in upper right and lower left\n",
     "    d[isteps-1][0]=a\n",
@@ -532,6 +550,8 @@
     "plt.plot(x[0:isteps],np.real(T))# plots initial condition\n",
     "\n",
     "for n in range(nsteps):#run crank for all t and plot for each plots real parts\n",
+    "    A=drv[n]\n",
+    "    A1=drv[n+1]\n",
     "    T=CrankNicolson(T)\n",
     "    Tn.append(T)\n",
     "    plt.plot(x[0:isteps],np.real(T))\n",
