--- a/Schrodinger- CRANK1.ipynb
+++ b/Schrodinger- CRANK1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {
     "scrolled": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {
     "scrolled": false
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {
     "scrolled": false
    },
@@ -774,14 +774,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\reddf\\Anaconda3\\lib\\site-packages\\numpy\\core\\numeric.py:538: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n"
-     ]
     },
     {
      "data": {
@@ -947,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
    "metadata": {
     "scrolled": false
    },
@@ -1034,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1616,18 +1608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-0.026062532529383967+0j)\n",
-      "30\n",
-      "31\n",
-      "30\n",
-      "30\n"
+      "(-0.026062532529383967+0j)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'remainder' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-100-d54f07b69fd1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mOmegam\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mOmega0\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdomega\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[0mOmega\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mOmegam\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mOmega\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmega\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmegamin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmegamin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOmegamin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m#print(len(theta))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: ufunc 'remainder' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
      ]
     }
    ],
@@ -1648,12 +1647,12 @@
     "for m in range(0,msteps):\n",
     "    Omegam=Omega0+(m)*domega\n",
     "    Omega[m]=Omegam\n",
-    "    #Omega[m]=((Omega[m]+np.abs(Omegamin))%(2*np.abs(Omegamin))-np.abs(Omegamin)\n",
+    "    Omega[m]=((Omega[m]+np.abs(Omegamin))%(2*np.abs(Omegamin))-np.abs(Omegamin))\n",
     "\n",
-    "print(len(theta))\n",
-    "print(len(Tn))\n",
-    "print(len(Omega))\n",
-    "print(nsteps)\n",
+    "#print(len(theta))\n",
+    "#print(len(Tn))\n",
+    "#print(len(Omega))\n",
+    "#print(nsteps)\n",
     "#Omega=pbar\n",
     "\n",
     "#Husini function \n",
@@ -1661,6 +1660,7 @@
     "    for i in range(isteps):\n",
     "        I=T[i]*np.exp((k*ntild*Omega*x)-(((theta-x)**2)/(4*(dtheta**4))))\n",
     "    return I#this is for simplicty to define the I function\n",
+    "\n",
     "I_int=np.zeros(nsteps,np.complex)\n",
     "for m in range(msteps):\n",
     "    for i in range(isteps):\n",
