plot on the same plot

--- a/Husimi function (2).ipynb
+++ b/Husimi function (2).ipynb
@@ -855,6 +855,17 @@
     "    plt.plot(P_X,P_V,',')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "plt.plot(P_X,P_V,',')\n",
+    "plt.contour(np.real(omega2),np.real(theta2),np.abs(Int)**2)"
+   ]
   }
  ],
  "metadata": {
